// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformNavComponent should render correct template 1`] = `
<ng-component
  mainPanelCollapsed="false"
  navGroups={[Function Array]}
  secondaryPanelCollapsed="false"
>
  <aui-platform-nav>
    <aui-nav-menu
      class="aui-platform-nav"
    >
      <div
        class="aui-nav-menu"
      >
        <div
          class="aui-nav-menu__main-panel"
        >
          <div
            cdkscrollable=""
            class="aui-nav-menu__main-panel-content"
          >
            <aui-nav-item-ul>
              <div
                class="aui-nav-item-ul"
              >
                
                
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li hasDivider"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                          <div
                            class="aui-nav-item__content"
                          >
                            
                            <div
                              class="aui-platform-nav__item"
                            >
                              <div
                                class="aui-platform-nav__label"
                              >
                                概览
                              </div>
                              
                            </div>
                          </div>
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                          <div
                            class="aui-nav-item__content"
                          >
                            
                            <div
                              class="aui-platform-nav__item"
                            >
                              <div
                                class="aui-platform-nav__label"
                              >
                                应用管理
                              </div>
                              
                              <div
                                class="aui-platform-nav__stage"
                              >
                                 Alpha 
                              </div>
                            </div>
                          </div>
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                          <div
                            class="aui-nav-item__content"
                          >
                            
                            <div
                              class="aui-platform-nav__item"
                            >
                              <div
                                class="aui-platform-nav__label"
                              >
                                Devops
                              </div>
                              
                            </div>
                          </div>
                        </div>
                        
                        <aui-icon
                          class="aui-nav-item-li__expansion-indicator"
                          icon="angle_left"
                        >
                          
                          <svg
                            class="aui-icon aui-icon-angle_left"
                          >
                            <use
                              xlink:href="http://localhost/#aui-icon-angle_left"
                            />
                          </svg>
                          
                        </aui-icon>
                      </div>
                      
                      <div
                        class="aui-nav-item-li__sub-items"
                      >
                        <aui-nav-item-ul
                          hidden=""
                        >
                          <div
                            class="aui-nav-item-ul isMainPanelCollapsed"
                          >
                            
                            <aui-nav-item-li>
                              <div
                                class="aui-nav-item-li"
                              >
                                <div
                                  auitooltipclass="aui-nav-item-tooltip"
                                  auitooltipposition="end"
                                  auitooltiptype="info"
                                  class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                                  data-set-depth="1"
                                >
                                  <div
                                    class="aui-nav-item"
                                  >
                                    <div
                                      class="aui-nav-item__icon"
                                    >
                                      
                                    </div>
                                    
                                    <div
                                      class="aui-nav-item__content"
                                    >
                                      
                                      <div
                                        class="aui-platform-nav__item"
                                      >
                                        <div
                                          class="aui-platform-nav__label"
                                        >
                                          持续交付
                                        </div>
                                        
                                      </div>
                                    </div>
                                  </div>
                                  
                                  <aui-icon
                                    class="aui-nav-item-li__expansion-indicator"
                                    icon="angle_left"
                                  >
                                    
                                    <svg
                                      class="aui-icon aui-icon-angle_left"
                                    >
                                      <use
                                        xlink:href="http://localhost/#aui-icon-angle_left"
                                      />
                                    </svg>
                                    
                                  </aui-icon>
                                </div>
                                
                                <div
                                  class="aui-nav-item-li__sub-items"
                                >
                                  <aui-nav-item-ul
                                    hidden=""
                                  >
                                    <div
                                      class="aui-nav-item-ul isMainPanelCollapsed"
                                    >
                                      
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    流水线
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    生成镜像
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    更新服务
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      
                                    </div>
                                  </aui-nav-item-ul>
                                </div>
                              </div>
                              
                            </aui-nav-item-li>
                            <aui-nav-item-li>
                              <div
                                class="aui-nav-item-li"
                              >
                                <div
                                  auitooltipclass="aui-nav-item-tooltip"
                                  auitooltipposition="end"
                                  auitooltiptype="info"
                                  class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                                  data-set-depth="1"
                                >
                                  <div
                                    class="aui-nav-item"
                                  >
                                    <div
                                      class="aui-nav-item__icon"
                                    >
                                      
                                    </div>
                                    
                                    <div
                                      class="aui-nav-item__content"
                                    >
                                      
                                      <div
                                        class="aui-platform-nav__item"
                                      >
                                        <div
                                          class="aui-platform-nav__label"
                                        >
                                          工具链
                                        </div>
                                        
                                      </div>
                                    </div>
                                  </div>
                                  
                                  <aui-icon
                                    class="aui-nav-item-li__expansion-indicator"
                                    icon="angle_left"
                                  >
                                    
                                    <svg
                                      class="aui-icon aui-icon-angle_left"
                                    >
                                      <use
                                        xlink:href="http://localhost/#aui-icon-angle_left"
                                      />
                                    </svg>
                                    
                                  </aui-icon>
                                </div>
                                
                                <div
                                  class="aui-nav-item-li__sub-items"
                                >
                                  <aui-nav-item-ul
                                    hidden=""
                                  >
                                    <div
                                      class="aui-nav-item-ul isMainPanelCollapsed"
                                    >
                                      
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    代码仓库
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    制品仓库
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    代码检查
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    测试工具
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      <aui-nav-item-li>
                                        <div
                                          class="aui-nav-item-li"
                                        >
                                          <div
                                            auitooltipclass="aui-nav-item-tooltip"
                                            auitooltipposition="end"
                                            auitooltiptype="info"
                                            class="aui-nav-item-li__content isMainPanelCollapsed"
                                            data-set-depth="2"
                                          >
                                            <div
                                              class="aui-nav-item"
                                            >
                                              <div
                                                class="aui-nav-item__icon"
                                              >
                                                
                                              </div>
                                              
                                              <div
                                                class="aui-nav-item__content"
                                              >
                                                
                                                <div
                                                  class="aui-platform-nav__item"
                                                >
                                                  <div
                                                    class="aui-platform-nav__label"
                                                  >
                                                    项目管理
                                                  </div>
                                                  
                                                </div>
                                              </div>
                                            </div>
                                            
                                          </div>
                                          
                                        </div>
                                        
                                      </aui-nav-item-li>
                                      
                                    </div>
                                  </aui-nav-item-ul>
                                </div>
                              </div>
                              
                            </aui-nav-item-li>
                            
                          </div>
                        </aui-nav-item-ul>
                      </div>
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                          <div
                            class="aui-nav-item__content"
                          >
                            
                            <div
                              class="aui-platform-nav__item"
                            >
                              <div
                                class="aui-platform-nav__label"
                              >
                                微服务
                              </div>
                              
                            </div>
                          </div>
                        </div>
                        
                        <aui-icon
                          class="aui-nav-item-li__expansion-indicator"
                          icon="angle_left"
                        >
                          
                          <svg
                            class="aui-icon aui-icon-angle_left"
                          >
                            <use
                              xlink:href="http://localhost/#aui-icon-angle_left"
                            />
                          </svg>
                          
                        </aui-icon>
                      </div>
                      
                      <div
                        class="aui-nav-item-li__sub-items"
                      >
                        <aui-nav-item-ul
                          hidden=""
                        >
                          <div
                            class="aui-nav-item-ul isMainPanelCollapsed"
                          >
                            
                            <aui-nav-item-li>
                              <div
                                class="aui-nav-item-li"
                              >
                                <div
                                  auitooltipclass="aui-nav-item-tooltip"
                                  auitooltipposition="end"
                                  auitooltiptype="info"
                                  class="aui-nav-item-li__content isMainPanelCollapsed"
                                  data-set-depth="1"
                                >
                                  <div
                                    class="aui-nav-item"
                                  >
                                    <div
                                      class="aui-nav-item__icon"
                                    >
                                      
                                    </div>
                                    
                                    <div
                                      class="aui-nav-item__content"
                                    >
                                      
                                      <div
                                        class="aui-platform-nav__item"
                                      >
                                        <div
                                          class="aui-platform-nav__label"
                                        >
                                          服务
                                        </div>
                                        
                                      </div>
                                    </div>
                                  </div>
                                  
                                </div>
                                
                              </div>
                              
                            </aui-nav-item-li>
                            <aui-nav-item-li>
                              <div
                                class="aui-nav-item-li"
                              >
                                <div
                                  auitooltipclass="aui-nav-item-tooltip"
                                  auitooltipposition="end"
                                  auitooltiptype="info"
                                  class="aui-nav-item-li__content isMainPanelCollapsed"
                                  data-set-depth="1"
                                >
                                  <div
                                    class="aui-nav-item"
                                  >
                                    <div
                                      class="aui-nav-item__icon"
                                    >
                                      
                                    </div>
                                    
                                    <div
                                      class="aui-nav-item__content"
                                    >
                                      
                                      <div
                                        class="aui-platform-nav__item"
                                      >
                                        <div
                                          class="aui-platform-nav__label"
                                        >
                                          配置列表
                                        </div>
                                        
                                      </div>
                                    </div>
                                  </div>
                                  
                                </div>
                                
                              </div>
                              
                            </aui-nav-item-li>
                            <aui-nav-item-li>
                              <div
                                class="aui-nav-item-li"
                              >
                                <div
                                  auitooltipclass="aui-nav-item-tooltip"
                                  auitooltipposition="end"
                                  auitooltiptype="info"
                                  class="aui-nav-item-li__content isMainPanelCollapsed"
                                  data-set-depth="1"
                                >
                                  <div
                                    class="aui-nav-item"
                                  >
                                    <div
                                      class="aui-nav-item__icon"
                                    >
                                      
                                    </div>
                                    
                                    <div
                                      class="aui-nav-item__content"
                                    >
                                      
                                      <div
                                        class="aui-platform-nav__item"
                                      >
                                        <div
                                          class="aui-platform-nav__label"
                                        >
                                          熔断监控
                                        </div>
                                        
                                      </div>
                                    </div>
                                  </div>
                                  
                                </div>
                                
                              </div>
                              
                            </aui-nav-item-li>
                            
                          </div>
                        </aui-nav-item-ul>
                      </div>
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                          <div
                            class="aui-nav-item__content"
                          >
                            
                            <div
                              class="aui-platform-nav__item"
                            >
                              <div
                                class="aui-platform-nav__label"
                              >
                                Service Mesh
                              </div>
                              
                            </div>
                          </div>
                        </div>
                        
                        <aui-icon
                          class="aui-nav-item-li__expansion-indicator"
                          icon="angle_left"
                        >
                          
                          <svg
                            class="aui-icon aui-icon-angle_left"
                          >
                            <use
                              xlink:href="http://localhost/#aui-icon-angle_left"
                            />
                          </svg>
                          
                        </aui-icon>
                      </div>
                      
                      <div
                        class="aui-nav-item-li__sub-items"
                      >
                        <aui-nav-item-ul
                          hidden=""
                        >
                          <div
                            class="aui-nav-item-ul isMainPanelCollapsed"
                          >
                            
                            <aui-nav-item-li>
                              <div
                                class="aui-nav-item-li"
                              >
                                <div
                                  auitooltipclass="aui-nav-item-tooltip"
                                  auitooltipposition="end"
                                  auitooltiptype="info"
                                  class="aui-nav-item-li__content isMainPanelCollapsed"
                                  data-set-depth="1"
                                >
                                  <div
                                    class="aui-nav-item"
                                  >
                                    <div
                                      class="aui-nav-item__icon"
                                    >
                                      
                                    </div>
                                    
                                    <div
                                      class="aui-nav-item__content"
                                    >
                                      
                                      <div
                                        class="aui-platform-nav__item"
                                      >
                                        <div
                                          class="aui-platform-nav__label"
                                        >
                                          调用链
                                        </div>
                                        
                                        <div
                                          class="aui-platform-nav__stage"
                                        >
                                           Beta 
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                  
                                </div>
                                
                              </div>
                              
                            </aui-nav-item-li>
                            
                          </div>
                        </aui-nav-item-ul>
                      </div>
                    </div>
                    
                  </aui-nav-item-li>
                </div>
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                          <div
                            class="aui-nav-item__content"
                          >
                            
                            <div
                              class="aui-platform-nav__item"
                            >
                              <div
                                class="aui-platform-nav__label"
                              >
                                成员
                              </div>
                              
                            </div>
                          </div>
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
              </div>
            </aui-nav-item-ul>
          </div>
          
          <div
            class="aui-nav-menu__main-panel-footer"
          >
            <aui-icon>
              
              <svg
                class="aui-icon aui-icon-angle_double_left"
              >
                <use
                  xlink:href="http://localhost/#aui-icon-angle_double_left"
                />
              </svg>
              
            </aui-icon>
          </div>
        </div>
        
      </div>
    </aui-nav-menu>
  </aui-platform-nav>
</ng-component>
`;

exports[`PlatformNavComponent should render correct template 2`] = `
<ng-component
  mainPanelCollapsed={[Function Boolean]}
  navGroups={[Function Array]}
  secondaryPanelCollapsed="false"
>
  <aui-platform-nav>
    <aui-nav-menu
      class="aui-platform-nav"
    >
      <div
        class="aui-nav-menu isMainPanelCollapsed"
      >
        <div
          class="aui-nav-menu__main-panel"
        >
          <div
            cdkscrollable=""
            class="aui-nav-menu__main-panel-content"
          >
            <aui-nav-item-ul>
              <div
                class="aui-nav-item-ul isMainPanelCollapsed"
              >
                
                
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li hasDivider"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
              </div>
            </aui-nav-item-ul>
          </div>
          
          <div
            class="aui-nav-menu__main-panel-footer"
          >
            <aui-icon>
              
              <svg
                class="aui-icon aui-icon-angle_double_right"
              >
                <use
                  xlink:href="http://localhost/#aui-icon-angle_double_right"
                />
              </svg>
              
            </aui-icon>
          </div>
        </div>
        
        <div
          class="aui-nav-menu__secondary-panel"
        >
          
          
          <div
            class="aui-nav-menu__secondary-panel-expand-button"
          >
            <aui-icon>
              
              <svg
                class="aui-icon aui-icon-navigation_collapse"
              >
                <use
                  xlink:href="http://localhost/#aui-icon-navigation_collapse"
                />
              </svg>
              
            </aui-icon>
          </div>
        </div>
      </div>
    </aui-nav-menu>
  </aui-platform-nav>
</ng-component>
`;

exports[`PlatformNavComponent should render correct template 3`] = `
<ng-component
  mainPanelCollapsed={[Function Boolean]}
  navGroups={[Function Array]}
  secondaryPanelCollapsed={[Function Boolean]}
>
  <aui-platform-nav>
    <aui-nav-menu
      class="aui-platform-nav"
    >
      <div
        class="aui-nav-menu isMainPanelCollapsed isSecondaryPanelCollapsed"
      >
        <div
          class="aui-nav-menu__main-panel"
        >
          <div
            cdkscrollable=""
            class="aui-nav-menu__main-panel-content"
          >
            <aui-nav-item-ul>
              <div
                class="aui-nav-item-ul isMainPanelCollapsed"
              >
                
                
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li hasDivider"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content hasSubItem isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
                <div
                  class="aui-nav-item-group"
                >
                  
                  
                  <aui-nav-item-li>
                    <div
                      class="aui-nav-item-li"
                    >
                      <div
                        auitooltipclass="aui-nav-item-tooltip"
                        auitooltipposition="end"
                        auitooltiptype="info"
                        class="aui-nav-item-li__content isMainPanelCollapsed"
                        data-set-depth="0"
                      >
                        <div
                          class="aui-nav-item"
                        >
                          <div
                            class="aui-nav-item__icon"
                          >
                            
                            
                            <aui-icon>
                              
                              <svg
                                class="aui-icon aui-icon-search_s"
                              >
                                <use
                                  xlink:href="http://localhost/#aui-icon-search_s"
                                />
                              </svg>
                              
                            </aui-icon>
                            
                          </div>
                          
                        </div>
                        
                      </div>
                      
                    </div>
                    
                  </aui-nav-item-li>
                </div>
              </div>
            </aui-nav-item-ul>
          </div>
          
          <div
            class="aui-nav-menu__main-panel-footer"
          >
            <aui-icon>
              
              <svg
                class="aui-icon aui-icon-angle_double_right"
              >
                <use
                  xlink:href="http://localhost/#aui-icon-angle_double_right"
                />
              </svg>
              
            </aui-icon>
          </div>
        </div>
        
        <div
          class="aui-nav-menu__secondary-panel"
        >
          
          
          <div
            class="aui-nav-menu__secondary-panel-expand-button"
          >
            <aui-icon>
              
              <svg
                class="aui-icon aui-icon-navigation_expand"
              >
                <use
                  xlink:href="http://localhost/#aui-icon-navigation_expand"
                />
              </svg>
              
            </aui-icon>
          </div>
        </div>
      </div>
    </aui-nav-menu>
  </aui-platform-nav>
</ng-component>
`;
